# mlflux

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
mlflux/: logging.py
mlflux/cli/: __init__.py  run.py
